test/Fail/MatchOnFunctions.err
MatchOnFunctions.agda:7.6-9: error: [SplitError.NotADatatype]
Cannot split on argument of non-datatype Nat → Nat
when checking that the pattern suc has type Nat → Nat
